[gd_scene load_steps=26 format=1]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://fonts/segoe.fnt" type="BitmapFont" id=2]
[ext_resource path="res://graphics/phone_ui.png" type="Texture" id=3]
[ext_resource path="res://graphics/char1.png" type="Texture" id=4]
[ext_resource path="res://graphics/char2.png" type="Texture" id=5]
[ext_resource path="res://graphics/char3.png" type="Texture" id=6]
[ext_resource path="res://graphics/settings.png" type="Texture" id=7]
[ext_resource path="res://graphics/schoolbag.png" type="Texture" id=8]
[ext_resource path="res://graphics/mobile.png" type="Texture" id=9]
[ext_resource path="res://graphics/map.png" type="Texture" id=10]
[ext_resource path="res://graphics/calendar.png" type="Texture" id=11]
[ext_resource path="res://asset scenes/npc.tscn" type="PackedScene" id=12]
[ext_resource path="res://asset scenes/object.tscn" type="PackedScene" id=13]
[ext_resource path="res://asset scenes/player.tscn" type="PackedScene" id=14]
[ext_resource path="res://asset scenes/dialogue.tscn" type="PackedScene" id=15]

[sub_resource type="PlaneShape" id=1]

plane = Plane( 0, 1, 0, 0 )

[sub_resource type="Environment" id=2]

ambient_light/enabled = true
ambient_light/color = Color( 0.925781, 0.842606, 0.842606, 1 )
ambient_light/energy = 0.5
fxaa/enabled = true
background/mode = 1
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 64.6215

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 61.0041

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 64.1907

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 63.1471

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 56.4041

[sub_resource type="CircleShape2D" id=8]

custom_solver_bias = 0.0
radius = 53.0022

[sub_resource type="CircleShape2D" id=9]

custom_solver_bias = 0.0
radius = 47.2968

[sub_resource type="CircleShape2D" id=10]

custom_solver_bias = 0.0
radius = 52.1685

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.555074, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 20, 0, 0, 0, 0.2, 0, 0, 0, 20, 0, 0, 0 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 20, 0, 0, 0, 0.2, 0, 0, 0, 20, 0, 0, 0 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="camera" type="Camera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -0.75105, 0.437046, -0.494887, 0.125114, 0.830181, 0.543273, 0.648282, 0.346108, -0.678187, -9.92103, 11.4286, -12.6359 )
projection = 0
fov = 65.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="ground" type="TestCube" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 20, 0, 0, 0, 0.5, 0, 0, 0, 20, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 2 )

[node name="ui_elements" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="label_date" type="Label" parent="ui_elements"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 5.0
margin/right = 335.0
margin/bottom = 67.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.550763, 0.538559, 0.761719, 1 )
text = "Monday, 8 AM"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_points" type="Label" parent="ui_elements"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1764.0
margin/top = 7.0
margin/right = 1857.0
margin/bottom = 69.0
custom_fonts/font = ExtResource( 2 )
text = "240"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_hotspot" type="Label" parent="ui_elements"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 18.0
margin/top = 1015.0
margin/right = 177.0
margin/bottom = 1077.0
custom_fonts/font = ExtResource( 2 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ui_phone" type="Area2D" parent="ui_elements"]

input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/ui_phone"]

transform/pos = Vector2( 961.087, 1855.43 )
texture = ExtResource( 3 )

[node name="char1" type="Area2D" parent="ui_elements"]

editor/display_folded = true
transform/pos = Vector2( 1566.89, 148.554 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 243.507, -4.08113 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/char1"]

transform/pos = Vector2( 246.125, -5.86652 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui_elements/char1"]

transform/pos = Vector2( 243.507, -4.08113 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="char2" type="Area2D" parent="ui_elements"]

editor/display_folded = true
transform/pos = Vector2( 1137, 263 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 678.827, 39.4509 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/char2"]

transform/pos = Vector2( 677.032, 37.5582 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui_elements/char2"]

transform/pos = Vector2( 678.827, 39.4509 )
shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="char3" type="Area2D" parent="ui_elements"]

editor/display_folded = true
transform/pos = Vector2( 1070, 351 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 748.206, 116.992 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/char3"]

transform/pos = Vector2( 747.179, 114.387 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui_elements/char3"]

transform/pos = Vector2( 748.206, 116.992 )
shape = SubResource( 5 )
trigger = true
_update_shape_index = 0

[node name="settings" type="Area2D" parent="ui_elements"]

editor/display_folded = true
transform/pos = Vector2( 1144, 484 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 676.106, 142.839 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/settings"]

transform/pos = Vector2( 675.362, 144.45 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui_elements/settings"]

transform/pos = Vector2( 676.106, 142.839 )
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="schoolbag" type="Area2D" parent="ui_elements" groups=[
"UI_icons",
]]

editor/display_folded = true
transform/pos = Vector2( 235, 536 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 575.795, 466.592 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/schoolbag"]

transform/pos = Vector2( 579.032, 463.226 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui_elements/schoolbag"]

transform/pos = Vector2( 575.795, 466.592 )
shape = SubResource( 7 )
trigger = true
_update_shape_index = 0

[node name="phone" type="Area2D" parent="ui_elements" groups=[
"UI_icons",
]]

editor/display_folded = true
transform/pos = Vector2( 319, 473 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 650.415, 519.668 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/phone"]

transform/pos = Vector2( 652.041, 526.164 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui_elements/phone"]

transform/pos = Vector2( 650.415, 519.668 )
shape = SubResource( 8 )
trigger = true
_update_shape_index = 0

[node name="map" type="Area2D" parent="ui_elements" groups=[
"UI_icons",
]]

editor/display_folded = true
transform/pos = Vector2( 550, 407 )
input/pickable = true
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 565.873, 587.915 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/map"]

transform/pos = Vector2( 568.962, 589.103 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui_elements/map"]

transform/pos = Vector2( 565.873, 587.915 )
shape = SubResource( 9 )
trigger = true
_update_shape_index = 0

[node name="calendar" type="Area2D" parent="ui_elements" groups=[
"UI_icons",
]]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1821.16, 1004 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="ui_elements/calendar"]

transform/pos = Vector2( 1815.76, 997.246 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui_elements/calendar"]

transform/pos = Vector2( 1821.16, 1004 )
shape = SubResource( 10 )
trigger = true
_update_shape_index = 0

[node name="ui_dialogue" type="Control" parent="ui_elements"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="effects" type="Node" parent="."]

editor/display_folded = true

[node name="ui_hover" type="Tween" parent="effects"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="ui_hide_show" type="Tween" parent="effects"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="npcs" type="Node" parent="."]

editor/display_folded = true

[node name="ellie" parent="npcs" instance=ExtResource( 12 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.44846, 1.70829, 12.5515 )

[node name="objects" type="Node" parent="."]

editor/display_folded = true

[node name="object" parent="objects" instance=ExtResource( 13 )]

editor/display_folded = true
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4299, 1.70829, -1.33639 )

[node name="player" parent="." instance=ExtResource( 14 )]

editor/display_folded = true
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0942068 )

[node name="geometry" parent="player"]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="CollisionShape" parent="player"]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="dialogue" parent="." instance=ExtResource( 15 )]

editor/display_folded = true

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]

[connection signal="mouse_enter" from="ui_elements/schoolbag" to="." method="_on_schoolbag_mouse_enter"]

[connection signal="mouse_exit" from="ui_elements/schoolbag" to="." method="_on_schoolbag_mouse_exit"]

[connection signal="mouse_enter" from="ui_elements/phone" to="." method="_on_phone_mouse_enter"]

[connection signal="mouse_exit" from="ui_elements/phone" to="." method="_on_phone_mouse_exit"]

[connection signal="mouse_enter" from="ui_elements/map" to="." method="_on_map_mouse_enter"]

[connection signal="mouse_exit" from="ui_elements/map" to="." method="_on_map_mouse_exit"]

[connection signal="mouse_enter" from="ui_elements/calendar" to="." method="_on_calendar_mouse_enter"]

[connection signal="mouse_exit" from="ui_elements/calendar" to="." method="_on_calendar_mouse_exit"]


[editable path="npcs/ellie"]
[editable path="player"]
